# zen

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  README.md  ROADMAP.md  antigravity-mcp-config.json  build.rs  install.sh  test_mcp.sh  zen.bash
.github/workflows/: ci.yml  release.yml
docs/: commands.md  installation.md  mcp.md
examples/: benchmark_levels.py  fs_speed_test.rs
src/: activity_log.rs  db.rs  hooks.rs  lib.rs  main.rs  mcp.rs  ops.rs  printer.rs  repl.rs  table.rs  types.rs  utils.rs  validation.rs
tests/: cli_test.rs  integration_test.rs
