[package]
name = "zen"
version = "0.6.8"
edition = "2024"
license = "Apache-2.0"
description = "Peace of mind for Python environments"

[lib]
name = "zen"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] } # Updated from "0.4.43" and added features
clap = { version = "4.5.56", features = ["derive", "env"] }
clap_complete = "4.5"

rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0" # Updated from "1.0.149"
comfy-table = "7.2"
dialoguer = "0.11"
walkdir = "2.5.0"
which = "8.0.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
toml = "0.8"
home = "0.5" # Useful for finding home config dir
colored = "2.0"
rayon = "1.11.0"
indicatif = "0.18.3"
owo-colors = "4.2.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
tokio = { version = "1.40", features = ["full"] }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = "0.8"
terminal_size = "0.4"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.24.0"
